update id and classes for vocab words and add third vocab word to list

--- a/Desktop/flashcards/css/styles.css
+++ b/Desktop/flashcards/css/styles.css
@@ -6,6 +6,10 @@ h1 {
   display: none;
 }
 
-ul {
-  list-style-type: none;
+#Operatorsdef {
+  display: none;
+}
+
+#Vocabdef {
+  display: none;
 }
